--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "bootstrap": "^4.0.0-alpha.3",
     "express": "^4.14.0",
     "json-server": "^0.8.18",
     "nodemon": "^1.10.2",
